# IMIS_CodeSample

./: README.md
scripts_bash/: ISLES_Evaluation.sh  icnsRandomForestGump_generateFeatures.sh  iterateRangerForAllPatients.sh
scripts_matlab/: MaximumIntensityProjection.m  ReadEvaluation.m  calculateDiceCoefficient.m  convertImageDataToPredictorMatrix.m  convertRangerOutputToImage.m  executeLesionPrediction.m  findFileFromCell.m  fspecial3.m  generateFeatures.m  leaveOneOut.m  loadMaskImages.m  normalizeChallengedataImages.m  postprocessingAndEvaluation.m  ranger_testdata.m
scripts_mevislab/: testdataVisualization.mlab  viewPredictionResults.mlab
src/: CMakeLists.txt  icnsRandomForestGump.cxx  itkWrapperDiscreteGaussianImageFilter.h  itkWrapperDiscreteGaussianImageFilter.hxx  itkWrapperFlipImageFilter.h  itkWrapperFlipImageFilter.hxx  itkZScoreDeviationFilter.h  itkZScoreDeviationFilter.hxx  itkZScoreNormalizeImageFilter.h  itkZScoreNormalizeImageFilter.hxx
